--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: plum
+minimal_mistakes_skin: aliceblue
 search: true
 
 # Build settings
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Shaikha AlNasri"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "This is just a test site do demo forking!"
+  bio    : "This is just a test site to demo forking!"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
